--- a/about.html
+++ b/about.html
@@ -223,7 +223,7 @@
                 </div>
                 <div class="team-member">
                     <img src="images/human.jpg" alt="Priya Sharma">
-                    <h3>Sreenu T</h3>
+                    <h3>Sreenu</h3>
                     <p>Co-Founder, Front-End Development Lead</p>
                 </div>
                 <div class="team-member">
