--- a/index.html
+++ b/index.html
@@ -271,6 +271,134 @@
     }
 }
 
+.carousel {
+    position: relative;
+    overflow: hidden;
+    max-width: 100%;
+    height: 500px;
+    margin: 2rem auto;
+    background: linear-gradient(to right, #0A6EC7, #005B99);
+    border-radius: 15px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+}
+
+.carousel-inner {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+
+.carousel-slide {
+    flex: 1 0 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-align: center;
+    padding: 2rem;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+
+.carousel-slide:nth-child(1) {
+    background-image: url('images/your-first-image.jpg'); /* Replace with your image path */
+}
+
+.carousel-slide:nth-child(2) {
+    background-image: url('images/your-second-image.jpg');
+}
+
+.carousel-slide:nth-child(3) {
+    background-image: url('images/your-third-image.jpg');
+}
+
+.carousel-content {
+    background: rgba(0, 0, 0, 0.6);
+    padding: 2rem;
+    border-radius: 10px;
+    animation: fadeIn 1.2s ease-in-out;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+.carousel-content h2 {
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: #FFD700; /* Gold color for headings */
+    margin-bottom: 1rem;
+    text-transform: uppercase;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.8);
+    animation: slideDown 0.8s ease-in;
+}
+
+.carousel-content p {
+    font-size: 1.2rem;
+    line-height: 1.6;
+    color: #ffffff;
+    margin-bottom: 1rem;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    animation: fadeIn 1.5s ease-in-out;
+}
+
+.carousel-buttons {
+    position: absolute;
+    bottom: 15px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.carousel-dot {
+    width: 12px;
+    height: 12px;
+    margin: 0 5px;
+    background: rgba(255, 255, 255, 0.6);
+    border-radius: 50%;
+    cursor: pointer;
+    transition: background 0.3s ease-in-out;
+}
+
+.carousel-dot.active {
+    background: #FFD700; /* Gold color for active dots */
+    transform: scale(1.3);
+}
+
+/* Animations */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes slideDown {
+    from {
+        transform: translateY(-20px);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+/* Responsive Adjustments */
+@media (max-width: 768px) {
+    .carousel-slide {
+        height: 400px;
+    }
+
+    .carousel-content h2 {
+        font-size: 2rem;
+    }
+
+    .carousel-content p {
+        font-size: 1rem;
+    }
+}
+
+
     </style>
 </head>
 <body>
