--- a/about.html
+++ b/about.html
@@ -220,26 +220,31 @@
                     <img src="images/human.jpg" alt="Neelam Vamsi Krishna Reddy">
                     <h3>Neelam Vamsi Krishna Reddy</h3>
                     <p>Founder & CEO</p>
+                    <p>A social entrepreneur promoting financial inclusion, sustainable economic growth, and advocating for ESIC benefits and GST reforms</p>
                 </div>
                 <div class="team-member">
                     <img src="images/human.jpg" alt="Priya Sharma">
-                    <h3>Sreenu</h3>
+                    <h3>Sreenu, MCA</h3>
                     <p>Co-Founder, Front-End Development Lead</p>
+                    <p>8 years of experience as a Lead Developer with expertise in .NET, microservices, SQL Server, Azure, AWS, and Angular</p>
                 </div>
                 <div class="team-member">
                     <img src="images/human.jpg" alt="Rajesh Kumar">
-                    <h3> M. Prathap Reddy </h3>
+                    <h3> M. Prathap Reddy, MCA </h3>
                     <p>Co-Founder, Head of Data Analytics & Technical Integration</p>
+                    <p>8 years of experience as a Technical Lead with expertise in Snowflake, DBT, DataStage, and UNIX</p>
                 </div>
                 <div class="team-member">
                     <img src="images/human.jpg" alt="Amit Patel">
-                    <h3>A. Suresh</h3>
+                    <h3>A. Suresh, MCA</h3>
                     <p>Co-Founder, Back-End Development Lead</p>
+                    <p>8 years of experience as a Data Engineer with expertise in data warehousing and customer transaction data management</p>
                 </div>
                 <div class="team-member">
                     <img src="images/human.jpg" alt="Sneha Verma">
                     <h3>M. V.V. Satyanarayana</h3>
                     <p>Co-Founder, HR & Finance Head</p>
+                    <p>11 years of experience in Quality Management and Regulatory Compliance with expertise in USFDA and MHRA standards</p>
                 </div>
             </div>
         </div>
