--- a/index.html
+++ b/index.html
@@ -419,19 +419,19 @@
             <div class="carousel-slide">
                 <div class="carousel-content">
                     <h2>Save As You Spend</h2>
-                    <p>Turning everyday transactions into opportunities for financial growth.</p>
+                    <!-- <p>Turning everyday transactions into opportunities for financial growth.</p> -->
                 </div>
             </div>
             <div class="carousel-slide">
                 <div class="carousel-content">
                     <h2>Effortless Savings</h2>
-                    <p>Automatically save a percentage of every UPI transaction.</p>
+                    <!-- <p>Automatically save a percentage of every UPI transaction.</p> -->
                 </div>
             </div>
             <div class="carousel-slide">
                 <div class="carousel-content">
                     <h2>Wealth Growth Options</h2>
-                    <p>Choose between Fixed Deposits, Mutual Funds, or 24K Gold.</p>
+                    <!-- <p>Choose between Fixed Deposits, Mutual Funds, or 24K Gold.</p> -->
                 </div>
             </div>
         </div>
@@ -459,7 +459,7 @@
         <div class="features-grid">
             <div class="feature-card">
                 <h3>Effortless Savings</h3>
-                <p>Automatically save a percentage of every UPI transaction.</p>
+                <!-- <p>Automatically save a percentage of every UPI transaction.</p> -->
             </div>
             <div class="feature-card">
                 <h3>Personalized Goals</h3>
